<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="8dp"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="4dp" >

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@+id/img_item_photo"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="4dp"
            android:text="@string/default_name"/>

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_below="@+id/tv_item_name"
            android:textSize="12dp"
            android:layout_marginHorizontal="4dp"
            android:text="@string/default_username"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="4dp"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_below="@+id/tv_item_username" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginRight="4dp"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:text="@string/company_title"/>

                <TextView
                    android:layout_marginRight="4dp"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:text="@string/colon"/>

                <TextView
                    android:id="@+id/tv_item_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/default_company"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:ellipsize="end"/>
            </TableRow>

            <TableRow android:layout_marginTop="2dp">

                <TextView
                    android:layout_marginRight="4dp"
                    android:text="@string/location_title"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginRight="4dp"
                    android:text="@string/colon"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_item_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_location"
                    android:textSize="12dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:ellipsize="end"/>
            </TableRow>

        </TableLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>