<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserDetailPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="320dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical"
            android:background="@drawable/bg_header" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                tools:src="@color/colorPrimary" />
            
            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_name"
                android:textSize="20dp"
                android:layout_marginTop="12dp"
                android:textColor="#fff"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_username"
                android:textSize="16dp"
                android:textColor="#fff"
                android:textStyle="italic"
                android:layout_gravity="center"/>

        </LinearLayout>
        
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"
            app:cardCornerRadius="4dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textStyle="italic"
                        android:fontFamily="casual"
                        android:text="@string/following_title"/>

                    <TextView
                        android:id="@+id/tv_detail_following"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textStyle="bold"
                        android:fontFamily="casual"
                        android:text="@string/default_number"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#808080"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textStyle="italic"
                        android:fontFamily="casual"
                        android:text="@string/follower_title"/>

                    <TextView
                        android:id="@+id/tv_detail_follower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textStyle="bold"
                        android:fontFamily="casual"
                        android:text="@string/default_number"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#808080"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textStyle="italic"
                        android:fontFamily="casual"
                        android:text="@string/repository_title"/>

                    <TextView
                        android:id="@+id/tv_detail_repository"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textStyle="bold"
                        android:fontFamily="casual"
                        android:text="@string/default_number"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <androidx.cardview.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_title_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_title"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_below="@+id/tv_title_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/default_company" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_title_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_title"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_below="@+id/tv_title_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/default_location" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>